Fix flex wrap

--- a/src/app/page.css
+++ b/src/app/page.css
@@ -334,6 +334,7 @@
 
   .projSectionsCont {
     margin: 3em 1em 1em 1em;
+    flex-wrap: wrap;
     width: 100%;
   }
 
